# agent4live

./: .commitlintrc.json  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json
.github/workflows/: release.yml
.husky/: commit-msg  pre-commit
app/: agent4live.amxd  index.js  lom_router.js
app/lom_router/: 00_helpers.js  00_helpers.test.js  10_dispatch.js  10_dispatch.test.js  20_clips.js  20_clips.test.js  30_devices.js  30_devices.test.js  40_racks.js  40_racks.test.js  50_observers.js  50_observers.test.js  60_routing.js  60_routing.test.js  70_session.js  70_session.test.js
app/python_scripts/: __init__.py
app/server/: auth.js  companion.js  companion.test.js  config.js  discovery.js  discovery.test.js  index.js  index.test.js  preferences.js  preferences.test.js  python.js  python.test.js
docs/: AGENT_NOTES.md  ARCHITECTURE.md  DEV_NOTES.md  LOM_NOTES.md  TROUBLESHOOTING.md
docs/features/: CAPABILITIES.md  (+1 more)
proto/http-in-live/: README.md  install.sh  pyproject.toml
proto/http-in-live/load_test/: claude_code_session.md  detect_dropouts.py  mcp_handshake.py  run_scenario.py  stability.py  synthetic.py
proto/http-in-live/load_test/tests/: test_bridge.py  test_detect_dropouts.py  test_lom_exec.py  test_synthetic.py  test_tools.py
proto/http-in-live/remote_script/agent4live_proto/: __init__.py  bridge.py  control_surface.py  lom_exec.py  server.py  server_sync.py  tools.py
proto/http-in-live/results/: REPORT.md
proto/http-in-live/scripts/: smoke_outside_live.py
(+115 files in other folders)
